@@ -186,6 +186,7 @@ t/26-pillai.t
 t/26-polygonal.t
 t/26-powercount.t
 t/26-powerful.t
+t/26-practical.t
 t/26-smooth.t
 t/26-vec.t
 t/27-bernfrac.t
