@@ -836,6 +836,11 @@ sub is_polygonal {
   $vx = '-'.$vx if $x < 0;
   return Math::Prime::Util::PP::is_polygonal($vx, $s, $refp);
 }
+sub is_practical {
+  my($n) = @_;
+  _validate_positive_integer($n);
+  return Math::Prime::Util::PP::is_practical($n);
+}
 sub valuation {
   my($n, $k) = @_;
   $n = -$n if defined $n && $n < 0;
